Added text about HP and WH sizing

--- a/index.html
+++ b/index.html
@@ -457,6 +457,14 @@
                                 <li>Find a list of experienced contractors at <a href="https://www.switchison.org/contractor-finder" target="_blank">SwitchIsOn.org</a></li>
                             </ul>
                         </li>
+                        <li>Finalize appliance selection: what appliances will you be buying & installing?
+                            <ul>
+                                <li>Check availability of appliances in your area</li>
+                                <li>Confirm the size you need for your project; this is particularly important for heat pumps and water heaters -- get expert help!</li>
+                                <li>Confirm the cost of appliances and installation details</li>
+                                <li>Check with your contractor for appliance maintenance</li>
+                            </ul>
+                        </li>
                         <li>Permit requirements: what permits are required for your project?
                             <ul>
                                 <li>Check with your local government for permit requirements</li>
