Added URL parameters for selection of gas appliances

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                         <!-- Power Reduction Options - shown when over capacity -->
                         <div id="powerReductionOptions" class="power-reduction-options" style="display: none;">
                             <h3>Power Reduction Options</h3>
-                            <p>The appliances you've selected exceed your available panel capacity. Consider selecting lower-power appliance options from the table above. Or, here are some strategies to resolve this:</p>
+                            <p>The appliances you've selected exceed your available panel capacity. Consider selecting lower-power appliance options from the table above. Or here are some other strategies to resolve this:</p>
                             <ul>
                                 <li>
                                     <strong>Circuit Sharing:</strong> Use existing 240V outlets for multiple appliances. You can share circuits between appliances that aren't used simultaneously (e.g., a dryer and an EV charger). 
