Add references to NEC code

--- a/index.html
+++ b/index.html
@@ -222,15 +222,14 @@
             <section id="loadAnalysis" class="step-content">
                 <h2>4. Current Load Analysis</h2>
                 <p>Now we need to analyze how much remaining panel capacity you have for electrification. This step is required to proceed.</p>
-                <p>We can do this two different ways, and you can use either or both methods:</p>
+                <p>The National Electrical Code (NEC) provides <strong>two different ways</strong> to calculate your available panel capacity. <strong>You can use either or both methods</strong>:</p>
                 <ol>
-                    <li>Top-down approach: Use your actual electricity usage data to determine your available panel capacity.</li>
-                    <li>Bottom-up approach: Calculate your available panel capacity by adding up your current electrical loads.</li>
+                    <li>Top-down approach: Use your actual electricity usage data to determine your available panel capacity. <br>This method follows the <a href="https://up.codes/s/determining-existing-loads" target="_blank">NEC 220.87</a> code section.</li>
+                    <li>Bottom-up approach: Calculate your available panel capacity by adding up your current electrical loads. <br>This method follows the <a href="https://up.codes/s/existing-dwelling-unit" target="_blank">NEC 220.83(B)</a> code section.</li>
                 </ol>
                 <br><p>The first approach is easy if you have a smart meter, but it's not always available. The second approach always works, but it's more time-consuming.</p>
                 <section id="step4-1" class="content-box">
                     <h3>4.1 Top-Down Approach</h3>
-                    <p><strong>Note:</strong> You must complete Step 3 (enter your panel size) before entering capacity values below.</p>
                     <p>Use your actual electricity usage data to determine your available panel capacity:</p>
                     <ol>
                         <li>Visit the <a href="https://panel.hea.com/" target="_blank">Panel Capacity Calculator</a></li>
@@ -257,7 +256,6 @@
 
                 <section id="step4-2" class="content-box">
                     <h3>4.2 Bottom-Up Approach</h3>
-                    <p><strong>Note:</strong> You must complete Step 3 (enter your panel size) before entering capacity values below.</p>
                     <p>Calculate your available panel capacity by adding up your current electrical loads:</p>
                     <ol>
                         <li>Visit the <a href="https://www.kopperfield.com/load-calculator" target="_blank">Kopperfield Load Calculator</a></li>
@@ -410,7 +408,7 @@
                             </div>
                         </div>
                     </div>
-                    <p>Note: CF (Coincidence Factor) is used in the 220.83 method to account for the fact that some appliances are not used at the same time.</p>
+                    <p>Note: CF (Coincidence Factor) is used in the NEC methods to account for the fact that not all appliances are used at the same time.</p>
                     <p>Click the "📋 Details" button for any appliance to see comprehensive product information, including all available data from our database.</p>
                 </div>
                 <form class="checklist-form" autocomplete="off">
