--- a/index.html
+++ b/index.html
@@ -222,15 +222,16 @@
             <section id="loadAnalysis" class="step-content">
                 <h2>4. Current Load Analysis</h2>
                 <p>Now we need to analyze how much remaining panel capacity you have for electrification. This step is required to proceed.</p>
-                <p>The National Electrical Code (NEC) provides <strong>two different ways</strong> to calculate your available panel capacity. <strong>You can use either or both methods</strong>:</p>
+                <p>The National Electrical Code (NEC) provides <strong>two different ways</strong> to calculate your available panel capacity. 
+                    <strong>You can use either or both methods</strong>:</p>
                 <ol>
-                    <li>Top-down approach: Use your actual electricity usage data to determine your available panel capacity. <br>This method follows the <a href="https://up.codes/s/determining-existing-loads" target="_blank">NEC 220.87</a> code section.</li>
-                    <li>Bottom-up approach: Calculate your available panel capacity by adding up your current electrical loads. <br>This method follows the <a href="https://up.codes/s/existing-dwelling-unit" target="_blank">NEC 220.83(B)</a> code section.</li>
+                    <li><strong>Top-down approach:</strong> Use your actual electricity usage data to determine your available panel capacity. <br>This method follows the <a href="https://up.codes/s/determining-existing-loads" target="_blank">NEC 220.87</a> code section.</li>
+                    <li><strong>Bottom-up approach:</strong> Calculate your available panel capacity by adding up your current electrical loads. <br>This method follows the <a href="https://up.codes/s/existing-dwelling-unit" target="_blank">NEC 220.83(B)</a> code section.</li>
                 </ol>
                 <br><p>The first approach is easy if you have a smart meter, but it's not always available. The second approach always works, but it's more time-consuming.</p>
                 <section id="step4-1" class="content-box">
                     <h3>4.1 Top-Down Approach</h3>
-                    <p>Use your actual electricity usage data to determine your available panel capacity:</p>
+                    <p>Use your actual electricity usage data to determine your available panel capacity. One way to do this:</p>
                     <ol>
                         <li>Visit the <a href="https://panel.hea.com/" target="_blank">Panel Capacity Calculator</a></li>
                         <li>Upload your smart meter data into that tool</li>
@@ -361,6 +362,11 @@
                                 <!-- CSV data will be populated by JavaScript -->
                             </tbody>
                         </table>
+                        
+                        <!-- Total Cost Range Display -->
+                        <div id="totalCostRangeDisplay" class="total-cost-range" style="margin-top: 20px; padding: 15px; background-color: var(--background-secondary, #f5f5f5); border-radius: var(--border-radius-md, 8px); text-align: center;">
+                            <strong>Total Cost Range:</strong> <span id="totalCostRange">-</span>
+                        </div>
                         
                         <!-- Power Reduction Options - shown when over capacity -->
                         <div id="powerReductionOptions" class="power-reduction-options" style="display: none;">
