Fixed bug in report displaying Project Name

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <main>
             <section id="projectInfo" class="step-content">
-                <h2>Welcome to the PanelWizard</h2>
+                <h2>1. Welcome to the PanelWizard</h2>
                 <div class="content-box">
                     <h3>Your Home Electrification Planning Tool</h3>
                     <p>PanelWizard is a tool that helps homeowners/users plan to fully electrify their home without an electrical panel upgrade. Electric panel upgrades are expensive and time-consuming; upsizing a home's electrical service 
@@ -40,7 +40,7 @@
                                 <h4>Start a New Project</h4>
                                 <p>Create a new electrification project from scratch.</p>
                                 <form id="newProjectForm" class="form-group">
-                                    <label for="projectName">Project Name:</label>
+                                    <label for="projectName">Project Name (e.g. 123 River Road):</label>
                                     <input 
                                         type="text" 
                                         id="projectName" 
