Removed duplicate Panel Amps column from step 6 table

--- a/index.html
+++ b/index.html
@@ -351,8 +351,7 @@
                             <thead>
                                 <tr>
                                     <th>Appliance Type</th>
-                                    <th>Name</th>
-                                    <th>Panel Amps (240V)</th>
+                                    <th>Description</th>
                                     <th>CF</th>
                                     <th>Cost Range</th>
                                     <th>Details</th>
