Added hint about Room by Room HVAC

--- a/index.html
+++ b/index.html
@@ -388,6 +388,9 @@
                                     <strong>Meter Socket Adapters:</strong> Install a meter socket adapter that provides additional circuits without needing a full panel upgrade.
                                     Examples include ConnectDER, SPAN Edge, Tesla and others.
                                 </li>
+                                <li>
+                                    <strong>Room by Room HVAC:</strong> Consider low power heat pumps for each room instead of a single large heat pump. Go back to step 2 and add more Heating Systems with lower BTU capacities.
+                                </li>
                             </ul>
                             <p>You may also want to consult with a qualified electrician to explore the best solution for your specific situation.</p>
                         </div>
