Added note about gas meter too close to electric panel

--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
                             <li>Do you have any existing 240 volt outlets that can be shared using a smart circuit splitter?
                                 <span class="tooltip-container"><span class="tooltip">A smart circuit splitter can be used to share a 240 volt outlet between two appliances. This is a common way to avoid upsizing your panel.</span>ⓘ</span>
                             </li>
+                            <li>Is your gas meter very near your electrical panel?
+                                <span class="tooltip-container"><span class="tooltip">If your gas meter is near your electrical panel, you may not be allowed to upsize your panel in that same location to accommodate the new load.</span>ⓘ</span>
+                            </li>
                         </ul>
                     </p>
                     <p>These details are not required for an initial electrification assessment.</p>
