Added info on cost ranges

--- a/index.html
+++ b/index.html
@@ -429,7 +429,8 @@
                             </div>
                         </div>
                     </div>
-                    <p>Note: CF (Coincidence Factor) is used in the NEC methods to account for the fact that not all appliances are used at the same time.</p>
+                    <p>Note 1: CF (Coincidence Factor) is used in the NEC methods to account for the fact that not all appliances are used at the same time.</p>
+                    <p>Note 2: Cost ranges are estimates, and cover only the equipment costs. Installation costs (which vary widely) and incentives are not included.</p>
                     <p>Click the "📋 Details" button for any appliance to see comprehensive product information, including all available data from our database.</p>
                 </div>
                 <form class="checklist-form" autocomplete="off">
