--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         (details <a href="https://www.canarymedia.com/articles/guides-and-how-tos/so-you-want-to-electrify-your-home-do-you-need-a-panel-upgrade-first" target="_blank">here</a>) can cost anywhere from $3,000 to $30,000 and take between 3 and 18 months 
                         (report <a href="https://www.redwoodenergy.net/research/service-upgrades-for-electrification-retrofits-study-final-report-2" target="_blank">here</a>).</p>
                     <p>This tool is designed to help homeowners assess whether they have sufficient electrical panel capacity to fully electrify their homes 
-                        and better understand their options for whole home electrification based on existing electrical panel capacity, historical energy data over the last 12 months and a list of customized appliance options.</p>
+                        by providing a customized list of modern efficient low power electric appliance options.</p>
                     <div class="project-form">
                         <h3>Project Management</h3>
                         <p>Start a new project or open an existing one from a file.</p>
@@ -242,55 +242,67 @@
                     <li><strong>Bottom-up approach:</strong> Calculate your available panel capacity by adding up your current electrical loads. <br>This method follows the <a href="https://up.codes/s/existing-dwelling-unit" target="_blank">NEC 220.83(B)</a> code section.</li>
                 </ol>
                 <br><p>The first approach is easy if you have a smart meter, but it's not always available. The second approach always works, but it's more time-consuming.</p>
-                <section id="step4-1" class="content-box">
+                <section id="step4-1" class="content-box collapsible-section">
                     <h3>4.1 Top-Down Approach</h3>
-                    <p>Use your actual electricity usage data to determine your available panel capacity. One way to do this:</p>
-                    <ol>
-                        <li>Visit the <a href="https://panel.hea.com/" target="_blank">Panel Capacity Calculator</a></li>
-                        <li>Upload your smart meter data into that tool</li>
-                        <li>Enter your existing panel size (from step 3)</li>
-                        <li>Run the calculator to see your available capacity and enter it below</li>
-                    </ol><br>
-                    <form class="form-group">
-                        <label for="topDownCapacity">Existing Available Capacity (Amps):</label>
-                        <input 
-                            type="number" 
-                            id="topDownCapacity" 
-                            name="topDownCapacity"
-                            min="0"
-                            step="1"
-                            placeholder="e.g., 40"
-                            class="large-input"
-                            data-validation="panel-size"
-                        >
-                        <p class="form-help">Enter the available capacity shown by the Panel Capacity Calculator</p>
-                        <div id="topDownCapacityError" class="validation-error" style="display: none; color: var(--error-color, #d32f2f); font-size: 0.9em; margin-top: 5px;"></div>
-                    </form>
+                    <button type="button" class="collapsible-toggle" id="step4-1-toggle" aria-expanded="true" aria-controls="step4-1-content">
+                        <span class="collapsible-toggle-icon">▼</span>
+                        <span class="collapsible-toggle-text">Hide Top-Down Approach</span>
+                    </button>
+                    <div id="step4-1-content" class="collapsible-content">
+                        <p>Use your actual electricity usage data to determine your available panel capacity. One way to do this:</p>
+                        <ol>
+                            <li>Visit the <a href="https://panel.hea.com/" target="_blank">Panel Capacity Calculator</a></li>
+                            <li>Upload your smart meter data into that tool</li>
+                            <li>Enter your existing panel size (from step 3)</li>
+                            <li>Run the calculator to see your available capacity and enter it below</li>
+                        </ol><br>
+                        <form class="form-group">
+                            <label for="topDownCapacity">Existing Available Capacity (Amps):</label>
+                            <input 
+                                type="number" 
+                                id="topDownCapacity" 
+                                name="topDownCapacity"
+                                min="0"
+                                step="1"
+                                placeholder="e.g., 40"
+                                class="large-input"
+                                data-validation="panel-size"
+                            >
+                            <p class="form-help">Enter the available capacity shown by the Panel Capacity Calculator</p>
+                            <div id="topDownCapacityError" class="validation-error" style="display: none; color: var(--error-color, #d32f2f); font-size: 0.9em; margin-top: 5px;"></div>
+                        </form>
+                    </div>
                 </section>
 
-                <section id="step4-2" class="content-box">
+                <section id="step4-2" class="content-box collapsible-section">
                     <h3>4.2 Bottom-Up Approach</h3>
-                    <p>Calculate your available panel capacity by adding up your current electrical loads:</p>
-                    <ol>
-                        <li>Visit the <a href="https://www.kopperfield.com/load-calculator" target="_blank">Kopperfield Load Calculator</a></li>
-                        <li>Enter your home's details and electrical equipment</li>
-                        <li>Run the calculator to see your available capacity</li>
-                    </ol><br>
-                    <form class="form-group">
-                        <label for="bottomUpCapacity">Existing Available Capacity (Amps):</label>
-                        <input 
-                            type="number" 
-                            id="bottomUpCapacity" 
-                            name="bottomUpCapacity"
-                            min="0"
-                            step="1"
-                            placeholder="e.g., 35"
-                            class="large-input"
-                            data-validation="panel-size"
-                        >
-                        <p class="form-help">Enter the available capacity shown by the calculator</p>
-                        <div id="bottomUpCapacityError" class="validation-error" style="display: none; color: var(--error-color, #d32f2f); font-size: 0.9em; margin-top: 5px;"></div>
-                    </form>
+                    <button type="button" class="collapsible-toggle" id="step4-2-toggle" aria-expanded="true" aria-controls="step4-2-content">
+                        <span class="collapsible-toggle-icon">▼</span>
+                        <span class="collapsible-toggle-text">Hide Bottom-Up Approach</span>
+                    </button>
+                    <div id="step4-2-content" class="collapsible-content">
+                        <p>Calculate your available panel capacity by adding up your current electrical loads:</p>
+                        <ol>
+                            <li>Visit the <a href="https://www.kopperfield.com/load-calculator" target="_blank">Kopperfield Load Calculator</a></li>
+                            <li>Enter your home's details and electrical equipment</li>
+                            <li>Run the calculator to see your available capacity</li>
+                        </ol><br>
+                        <form class="form-group">
+                            <label for="bottomUpCapacity">Existing Available Capacity (Amps):</label>
+                            <input 
+                                type="number" 
+                                id="bottomUpCapacity" 
+                                name="bottomUpCapacity"
+                                min="0"
+                                step="1"
+                                placeholder="e.g., 35"
+                                class="large-input"
+                                data-validation="panel-size"
+                            >
+                            <p class="form-help">Enter the available capacity shown by the calculator</p>
+                            <div id="bottomUpCapacityError" class="validation-error" style="display: none; color: var(--error-color, #d32f2f); font-size: 0.9em; margin-top: 5px;"></div>
+                        </form>
+                    </div>
                 </section>
 
                 <section id="capacitySummary" class="content-box" style="display: none;">
