--- a/index.html
+++ b/index.html
@@ -322,35 +322,53 @@
                 <p>Please note these calculations will result in only rough estimates, and you should always consult with a professional to get a more accurate analysis.</p>
                 <p>We can do this several different ways, and you can use whichever method works best for you:</p>
 
-                <section id="step5-1" class="content-box">
+                <section id="step5-1" class="content-box collapsible-section">
                     <h3>5.1 Home Energy Academy Electrification Calculator</h3>
-                    <p>Use the Home Energy Academy's free electrification calculator tool to analyze your gas usage data:</p>
-                    <ol>
-                        <li>Visit the <a href="https://www.homeenergyacademy.com/electrify" target="_blank">Electrification Calculator</a></li>
-                        <li>Enter your natural gas usage data</li>
-                        <li>Follow the tool's instructions to get cost impact estimates</li>
-                    </ol>
+                    <button type="button" class="collapsible-toggle" id="step5-1-toggle" aria-expanded="true" aria-controls="step5-1-content">
+                        <span class="collapsible-toggle-icon">▼</span>
+                        <span class="collapsible-toggle-text">Hide Home Energy Academy Electrification Calculator</span>
+                    </button>
+                    <div id="step5-1-content" class="collapsible-content">
+                        <p>Use the Home Energy Academy's free electrification calculator tool to analyze your gas usage data:</p>
+                        <ol>
+                            <li>Visit the <a href="https://www.homeenergyacademy.com/electrify" target="_blank">Electrification Calculator</a></li>
+                            <li>Enter your natural gas usage data</li>
+                            <li>Follow the tool's instructions to get cost impact estimates</li>
+                        </ol>
+                    </div>
                 </section>
 
-                <section id="step5-2" class="content-box">
+                <section id="step5-2" class="content-box collapsible-section">
                     <h3>5.2 PG&E HomeIntel Service</h3>
-                    <p>Use PG&E's HomeIntel service for natural gas analysis (free for PG&E customers):</p>
-                    <ol>
-                        <li>Sign up for <a href="https://join.hea.com/" target="_blank">PG&E's HomeIntel service</a></li>
-                        <li>Authorize access to your PG&E energy data</li>
-                        <li>Follow the tool's instructions to get detailed analysis results</li>
-                    </ol>
+                    <button type="button" class="collapsible-toggle" id="step5-2-toggle" aria-expanded="true" aria-controls="step5-2-content">
+                        <span class="collapsible-toggle-icon">▼</span>
+                        <span class="collapsible-toggle-text">Hide PG&E HomeIntel Service</span>
+                    </button>
+                    <div id="step5-2-content" class="collapsible-content">
+                        <p>Use PG&E's HomeIntel service for natural gas analysis (free for PG&E customers):</p>
+                        <ol>
+                            <li>Sign up for <a href="https://join.hea.com/" target="_blank">PG&E's HomeIntel service</a></li>
+                            <li>Authorize access to your PG&E energy data</li>
+                            <li>Follow the tool's instructions to get detailed analysis results</li>
+                        </ol>
+                    </div>
                 </section>
 
-                <section id="step5-3" class="content-box">
+                <section id="step5-3" class="content-box collapsible-section">
                     <h3>5.3 Spreadsheet Method</h3>
-                    <p>Use a simple spreadsheet tool for natural gas analysis:</p>
-                    <ol>
-                        <li>Download a copy of this <a href="https://1drv.ms/x/c/428e7d625e39de0e/EQEdseWX0WJCrVr2EfqFimUB-Z-UR4ThedxRMsmSqGqgEA?e=OpmzKD" target="_blank">spreadsheet</a> which includes instructions</li>
-                        <li>Enter your <b>monthly natural gas usage data</b> into the spreadsheet</li>
-                        <li>Answer other questions about your home and natural gas usage</li>
-                        <li>See the results in the spreadsheet</li>
-                    </ol>
+                    <button type="button" class="collapsible-toggle" id="step5-3-toggle" aria-expanded="true" aria-controls="step5-3-content">
+                        <span class="collapsible-toggle-icon">▼</span>
+                        <span class="collapsible-toggle-text">Hide Spreadsheet Method</span>
+                    </button>
+                    <div id="step5-3-content" class="collapsible-content">
+                        <p>Use a simple spreadsheet tool for natural gas analysis:</p>
+                        <ol>
+                            <li>Download a copy of this <a href="https://1drv.ms/x/c/428e7d625e39de0e/EQEdseWX0WJCrVr2EfqFimUB-Z-UR4ThedxRMsmSqGqgEA?e=OpmzKD" target="_blank">spreadsheet</a> which includes instructions</li>
+                            <li>Enter your <b>monthly natural gas usage data</b> into the spreadsheet</li>
+                            <li>Answer other questions about your home and natural gas usage</li>
+                            <li>See the results in the spreadsheet</li>
+                        </ol>
+                    </div>
                 </section>
 
                 <form class="checklist-form" autocomplete="off">
