Made project naming instructions less confusing and added tooltip

--- a/index.html
+++ b/index.html
@@ -50,20 +50,21 @@
                                 <h4>Start a New Project</h4>
                                 <p>Create a new electrification project from scratch.</p>
                                 <form id="newProjectForm" class="form-group">
-                                    <label for="projectName">Project Name (e.g. 123 River Road):</label>
+                                    <label for="projectName">Project Name (e.g. 123RiverRd or use today's date):</label>
                                     <input 
                                         type="text" 
                                         id="projectName" 
                                         placeholder="Enter a custom project name"
                                         required
                                     >
-                                    <p class="form-help">This name will be used for your project file</p>
+                                    <p class="form-help">This name will be used for your project file if you save it.</p>
                                     <button type="submit" class="primary-button">Create Project</button>
+                                    <span class="tooltip-container"><span class="tooltip">You can use any name you want, but it's best to use a name that is easy to remember and identify your project. Note this project file will not be created until you click one of the Save Project to File buttons.</span>ⓘ</span>
                                 </form>
                             </div>
 
                             <div class="project-option open-project-option">
-                                <h4>Open Existing Project</h4>
+                                <h4>Open an Existing Project</h4>
                                 <p>Continue working on a previously saved project file.</p>
                                 <div class="form-group">
                                     <div class="import-section">
