Decreased the default Btu/h for additional heat pumps and added more help text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                                 <label class="checkbox-label">
                                     <input type="checkbox" name="electrification" value="heating" autocomplete="off">
                                     <span>Heating Systems <span class="tooltip-container"><span class="tooltip">This could be a natural gas furnace, boiler or wall heater. Or even a gas fireplace if it is used for heating. 
-                                        We'll need to know the capacity of the existing gas heating unit(s); BTUs per hour (Btu/h) is a measure of heating capacity of natural gas heaters and usually appears on the unit.</span>ⓘ</span></span>
+                                        We'll need to match the capacity of the existing gas heating unit(s) with one or more new electric heat pumps. This capacity is measured in BTUs per hour (Btu/h). 
+                                        Btu/h is a measure of heating capacity of natural gas heaters and usually appears on the unit.</span>ⓘ</span></span>
                                 </label>
                                 <div class="quantity-field" data-for="heating">
                                     <div class="heating-systems-container">
