Minor text updates.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             class="large-input"
                         >
                         <p class="form-help">Enter a value between 10 and 1000 amps</p>
-                        <p class="form-help">Note! This application assume a 240 volt panel. If you have a 120 volt panel, do not use this tool.</p>
+                        <p class="form-help">Note! Most residential electrical panels are 240 volts. If you have a 120 volt panel, do not use this tool.</p>
                         <p class="form-help">Not sure about your panel size? <br>
                             To find out, look for the <a href="https://static.hea.com/images/Service_Amps_on_Meter.png" target="_blank">CL number on your meter</a>, see instructions <a href="https://www.quitcarbon.com/help/how-to-find-your-main-electrical-service" target="_blank">here</a>, or watch this <a href="https://www.thespruce.com/electrical-service-size-of-my-home-1152752" target="_blank">video</a>.
                             Or try using the <a href="https://www.kopperfield.com/panel-schedule" target="_blank">Kopperfield panel schedule tool</a> - it can help determine your panel size from a photo!</p><br>
