Reorganized and improved some information text

--- a/index.html
+++ b/index.html
@@ -201,36 +201,6 @@
                             To find out, look for the <a href="https://static.hea.com/images/Service_Amps_on_Meter.png" target="_blank">CL number on your meter</a>, see instructions <a href="https://www.quitcarbon.com/help/how-to-find-your-main-electrical-service" target="_blank">here</a>, or watch this <a href="https://www.thespruce.com/electrical-service-size-of-my-home-1152752" target="_blank">video</a>.
                             Or try using the <a href="https://www.kopperfield.com/panel-schedule" target="_blank">Kopperfield panel schedule tool</a> - it can help determine your panel size from a photo!</p><br>
                     </form>
-                    <h3>Additional Equipment Information</h3>
-                    <p>Later you may want to gather more information about your electrical panel, including: 
-                        <ul>
-                            <li>Is your existing electric panel dangerous? 
-                                <span class="tooltip-container"><span class="tooltip">Some panel types are dangerous and need to be replaced, like Federal Pacific, Zinsco, Stablock & Pushmatic. Note: a panel replacement is much easier than upsizing a panel.</span>ⓘ</span>
-                            </li>
-                            <li>How many available breaker slots do you have?
-                                <span class="tooltip-container"><span class="tooltip">These open slots can be used to add more appliances to your panel.</span>ⓘ</span>
-                            </li>
-                            <li>Are tandem breakers already being used?
-                                <span class="tooltip-container"><span class="tooltip">Tandem (or twin, slim or duplex) breakers are two breakers occupying a single breaker slot. This is a common way to save space on a panel.</span>ⓘ</span>
-                            </li>
-                            <li>Can some of the existing breakers be combined?
-                                <span class="tooltip-container"><span class="tooltip">It is often possible to combine lighting circuits since modern LED lights are very low power.</span>ⓘ</span>
-                            </li>
-                            <li>Is there physical space available to add a subpanel?
-                                <span class="tooltip-container"><span class="tooltip">A subpanel is a smaller electrical panel that is connected to your main panel. It can be used to add more electrical capacity to your home.</span>ⓘ</span>
-                            </li>
-                            <li>Do you have any unused 240 volt outlets (like for an unused electric dryer or cooktop)?
-                                <span class="tooltip-container"><span class="tooltip">These unused 240 volt outlets can possibly be used by the new appliances you're adding.</span>ⓘ</span>
-                            </li>
-                            <li>Do you have any existing 240 volt outlets that can be shared using a smart circuit splitter?
-                                <span class="tooltip-container"><span class="tooltip">A smart circuit splitter can be used to share a 240 volt outlet between two appliances. This is a common way to avoid upsizing your panel.</span>ⓘ</span>
-                            </li>
-                            <li>Is your gas meter very near your electrical panel?
-                                <span class="tooltip-container"><span class="tooltip">If your gas meter is near your electrical panel, you may not be allowed to upsize your panel in that same location to accommodate the new load.</span>ⓘ</span>
-                            </li>
-                        </ul>
-                    </p>
-                    <p>These details are not required for an initial electrification assessment.</p>
                 </div>
             </section>
 
@@ -483,11 +453,11 @@
                     <ul>
                         <li>Timeline planning: which of these projects do you want to do first?
                             <ul>
-                                <li>If you're using the bottom-up load calculation (NEC 220.83), you can do it all at once</li>
-                                <li>If you're using the top-down load calculation (NEC 220.87), 
-                                    it helps to break up your project into phases and check your new peak load after each phase. 
+                                <li>If you're using the top-down load calculation (NEC 220.87, from step 4.1), 
+                                    it may help to break up your project into phases and check your new peak load after each phase. 
                                     For example, you might upgrade your heating system first, then your water heater, then your cooking appliance. 
                                     Between each project you can take 30 days to recalculate your remaining panel capacity</li>
+                                <li>If you're using the bottom-up load calculation (NEC 220.83, from step 4.2), you can do it all at once</li>
                             </ul>
                         </li>
                         <li>Budget considerations: what is your budget for this project?
@@ -523,6 +493,34 @@
                                 <li>Check with your local government for permit requirements</li>
                                 <li>Check with your utility for permit requirements</li>
                                 <li>Check with your contractor for permit requirements</li>
+                            </ul>
+                        </li>
+                        <li>Additional equipment information: You or your contractor may want to investigate the following issues:
+                            <ul>
+                                <li>Is your existing electric panel dangerous? 
+                                    <span class="tooltip-container"><span class="tooltip">Some panel types are dangerous and need to be replaced, like Federal Pacific, Zinsco, Stablock & Pushmatic. Note: a panel replacement is much easier than upsizing a panel.</span>ⓘ</span>
+                                </li>
+                                <li>How many available breaker slots do you have?
+                                    <span class="tooltip-container"><span class="tooltip">These open slots can be used to add more appliances to your panel.</span>ⓘ</span>
+                                </li>
+                                <li>Are tandem breakers already being used?
+                                    <span class="tooltip-container"><span class="tooltip">Tandem (or twin, slim or duplex) breakers are two breakers occupying a single breaker slot. This is a common way to save space on a panel.</span>ⓘ</span>
+                                </li>
+                                <li>Can some of the existing breakers be combined?
+                                    <span class="tooltip-container"><span class="tooltip">It is often possible to combine lighting circuits since modern LED lights are very low power.</span>ⓘ</span>
+                                </li>
+                                <li>Is there physical space available to add a subpanel?
+                                    <span class="tooltip-container"><span class="tooltip">A subpanel is a smaller electrical panel that is connected to your main panel. It can be used to add more electrical capacity to your home.</span>ⓘ</span>
+                                </li>
+                                <li>Do you have any unused 240 volt outlets (like for an unused electric dryer or cooktop)?
+                                    <span class="tooltip-container"><span class="tooltip">These unused 240 volt outlets can possibly be used by the new appliances you're adding.</span>ⓘ</span>
+                                </li>
+                                <li>Do you have any existing 240 volt outlets that can be shared using a smart circuit splitter?
+                                    <span class="tooltip-container"><span class="tooltip">A smart circuit splitter can be used to share a 240 volt outlet between two appliances. This is a common way to avoid upsizing your panel.</span>ⓘ</span>
+                                </li>
+                                <li>Is your gas meter very near your electrical panel?
+                                    <span class="tooltip-container"><span class="tooltip">If your gas meter is near your electrical panel, you may not be allowed to upsize your panel in that same location to accommodate the new load.</span>ⓘ</span>
+                                </li>
                             </ul>
                         </li>
                     </ul>
