Minor text updates in step 4.2

--- a/index.html
+++ b/index.html
@@ -287,11 +287,12 @@
                     </button>
                     <div id="step4-2-content" class="collapsible-content">
                         <p>Calculate your available panel capacity by adding up your current electrical loads:</p>
-                        <ol>
-                            <li>Visit the <a href="https://www.kopperfield.com/load-calculator" target="_blank">Kopperfield Load Calculator</a></li>
-                            <li>Enter your home's details and electrical equipment</li>
-                            <li>Run the calculator to see your available capacity</li>
-                        </ol><br>
+                        <ul>
+                            <li>Hire a professional electrician to do the 220.83(B) load calculation for you</li>
+                            <li>Or...</li>
+                            <li>Visit the <a href="https://www.kopperfield.com/load-calculator" target="_blank">Kopperfield Load Calculator</a>,  
+                                enter your home's details and electrical equipment, and run the calculator to see your available capacity</li>
+                        </ul><br>
                         <form class="form-group">
                             <label for="bottomUpCapacity">Existing Available Capacity (Amps):</label>
                             <input 
@@ -304,7 +305,7 @@
                                 class="large-input"
                                 data-validation="panel-size"
                             >
-                            <p class="form-help">Enter the available capacity shown by the calculator</p>
+                            <p class="form-help">Enter the available capacity shown by the calculator or provided by your electrician</p>
                             <div id="bottomUpCapacityError" class="validation-error" style="display: none; color: var(--error-color, #d32f2f); font-size: 0.9em; margin-top: 5px;"></div>
                         </form>
                     </div>
