Changed "Cost Range" to "Equipment Cost Range" to be more clear

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                                     <th>Appliance Type</th>
                                     <th>Description</th>
                                     <th>CF</th>
-                                    <th>Cost Range</th>
+                                    <th>Equipment Cost Range</th>
                                     <th>Details</th>
                                 </tr>
                             </thead>
